# rust-rocket-template

./: Cargo.toml  README.md  reademe.md
src/: error_handler.rs  main.rs
src/middleware/: auth.rs  mod.rs
src/models/: mod.rs  post.rs  response.rs  user.rs
src/routes/: mod.rs  posts.rs  route_list.rs  users.rs
src/utils/: utils.rs
