[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0"
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8.21"
validator = { version = "0.18", features = ["derive"] }
rocket-validation = "0.1.1"